# asistent

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  need.env  pyproject.toml  test.py
asist/: __init__.py
asist/api/: __init__.py  core.py  datamodels.py
asist/api/routers/: __init__.py  check_in.py  currencies.py  debts.py  finances.py  include.py  notes.py  users.py
asist/bott/: __init__.py  commands.py  core.py  greet.py  helpers.py  include.py  keyboards.py  set_handlers.py  states.py  texts.py
asist/bott/handlers/: __init__.py  check_in_handlers.py  currency_handlers.py  debts_handlers.py  main_handlers.py  states.py
asist/bott/handlers/states/: check_in_state.py  clock_state.py  currency_state.py  debts_state.py
asist/bott/mixins/: __init__.py  base.py  check_in_mixin.py  currency_mixin.py  debts_mixin.py  finance_mixin.py  include.py  user_mixin.py
asist/database/: __init__.py  core.py  database.py  models.py
asist/database/methods/: __init__.py  base.py  check_in.py  currency.py  debts.py  finance.py  helpers.py  house.py  include.py  note.py  user.py
asist/parser/: __init__.py  helpers.py  pars_course_currencies.py
