[tool.poetry]
name = "asist"
version = "0.1.0"
description = ""
authors = ["Egor <egorkononec64@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.14.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^4.2.5"
peewee = "^3.17.8"
loguru = "^0.7.3"


[tool.poetry.scripts]
dev = "main:start_dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
