[tool.poetry]
name = "asist"
version = "0.1.0"
description = ""
authors = ["Egor <egorkononec64@gmail.com>"]

packages = [{include = "asist"}]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.14.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
lxml = "^4.2.5"
loguru = "^0.7.3"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[tool.poetry.scripts]
dev = "main:start_dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
